refactor : PlayingCard 생성 메서드 변경에 따른 수정