@@ -11,11 +11,12 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
 
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
-import static model.card.vo.PlayingCard.makeCard;
+import static model.card.vo.PlayingCard.of;
 import static org.assertj.core.api.AssertionsForClassTypes.assertThat;
 
 class PlayerTest {
@@ -25,7 +26,8 @@ class PlayerTest {
     void setUp() {
         String inputtedName = "apple";
         int inputtedBattingMoney = 10000;
-        List<PlayingCard> inputtedCards = List.of(makeCard(Suit.SPADE, Number.ACE), makeCard(Suit.HEART, Number.SEVEN));
+        List<PlayingCard> inputtedCards = new ArrayList<>(
+                Arrays.asList(of(Suit.SPADE, Number.ACE), of(Suit.HEART, Number.SEVEN)));
         player = new Player(inputtedName, inputtedBattingMoney, inputtedCards);
     }
 
@@ -35,7 +37,7 @@ class PlayerTest {
         //when
         String inputtedName = "apple";
         int inputtedBattingMoney = 10000;
-        List<PlayingCard> inputtedCards = List.of(makeCard(Suit.SPADE, Number.ACE), makeCard(Suit.HEART, Number.SEVEN));
+        List<PlayingCard> inputtedCards = List.of(of(Suit.SPADE, Number.ACE), of(Suit.HEART, Number.SEVEN));
 
         //then
         assertThat(player).isEqualTo(new Player(inputtedName, inputtedBattingMoney, inputtedCards));
@@ -46,7 +48,7 @@ class PlayerTest {
     @DisplayName("getCards() 실행 시, cards 를 반환한다.")
     void getCards() {
         //given
-        List<PlayingCard> inputtedCards = List.of(makeCard(Suit.SPADE, Number.ACE), makeCard(Suit.HEART, Number.SEVEN));
+        List<PlayingCard> inputtedCards = List.of(of(Suit.SPADE, Number.ACE), of(Suit.HEART, Number.SEVEN));
         //when
         Cards actual = player.getCards();
 
@@ -59,29 +61,16 @@ class PlayerTest {
     void draw() {
         //given
         List<PlayingCard> expectedCards = Arrays.asList(
-                makeCard(Suit.SPADE, Number.ACE),
-                makeCard(Suit.HEART, Number.SEVEN),
-                makeCard(Suit.CLUB, Number.SEVEN)
+                of(Suit.SPADE, Number.ACE),
+                of(Suit.HEART, Number.SEVEN),
+                of(Suit.CLUB, Number.SEVEN)
         );
 
         //when
-        player.draw(makeCard(Suit.CLUB, Number.SEVEN));
+        player.draw(of(Suit.CLUB, Number.SEVEN));
 
         //then
         assertThat(player.getCards()).isEqualTo(new Cards(expectedCards));
-    }
-
-    @Test
-    @DisplayName("isStay() 호출 시, 플레이어의 상태가 stay 인 경우 true 를 반환한다.")
-    void isStay() {
-        //given
-        player.stay();
-
-        //when
-        boolean actual = player.isStay();
-
-        //then
-        assertThat(actual).isTrue();
     }
 
     @ParameterizedTest
@@ -90,7 +79,7 @@ class PlayerTest {
     @MethodSource("DealerCardsAndExpectedDividendsProvider")
     void battle(final Cards dealerCards, final int expectedDividends) {
         //when
-        int actualDividends = player.battle(dealerCards);
+        int actualDividends = player.getDividends(dealerCards);
 
         //then
         assertThat(actualDividends).isEqualTo(expectedDividends);
@@ -98,8 +87,8 @@ class PlayerTest {
 
     private static Stream<Arguments> DealerCardsAndExpectedDividendsProvider() {
         return Stream.of(
-                Arguments.of(new Cards(List.of(makeCard(Suit.HEART, Number.SIX), makeCard(Suit.SPADE, Number.KING))), 10000),
-                Arguments.of(new Cards(List.of(makeCard(Suit.HEART, Number.NINE), makeCard(Suit.SPADE, Number.KING))), -10000)
+                Arguments.of(new Cards(List.of(of(Suit.HEART, Number.SIX), of(Suit.SPADE, Number.KING))), 10000),
+                Arguments.of(new Cards(List.of(of(Suit.HEART, Number.NINE), of(Suit.SPADE, Number.KING))), -10000)
         );
     }
 }
